tests/NormalTests/paczka1/small_fuzzy/73117918.err
Error in line 2: i0baK S347 34,5
Error in line 9: S785 S140 83,3
